--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,51 @@
+
+# Node modules
+node_modules/
+
+# Build output
+dist/
+build/
+dist-ssr/
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+*.log
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
 
-node_modules/
-dist/
+# Env files
 .env
-.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE files
 .vscode/
+.idea/
+
+# Misc
+*.swp
+*.swo
+
+# Coverage
+coverage/
+
+# Next.js
+.next/
+
+# Parcel
+.cache/
+
+# Svelte
+__sapper__/
+
+# TypeScript
+*.tsbuildinfo
 
